# aws-cdk-cognito

./: .gitignore  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
configs/: app_configs.json  deployment_config.py
core/utils/: datetime.py
example/: login.py
functions/post_authentication/: lambda_function.py
functions/post_confirmation/: lambda_function.py
functions/pre_authentication/: lambda_function.py
functions/pre_sign_up/: lambda_function.py
functions/pre_token_generation/: lambda_function.py
infra/: infra_stack.py
infra/services/: cognito_service.py  lambda_service.py  network_service.py
tests/unit/: test_aws_cdk_cognito_stack.py
