[tool.poetry]
name = "aws-cdk-cognito"
version = "0.1.0"
description = ""
authors = ["Ankit Jain <ankii.jain@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_cdk_cognito"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
antlr4-python3-runtime = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
